k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexabank
  labels:
    app.kubernetes.io/name: nexabank
